changed nav-collapse background, need to fix font color to black

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -228,7 +228,8 @@
   }
   .navbar-custom.top-nav-collapse {
     padding: 0;
-    background: #031019;
+    background: white;
+    color: black;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   }
 }
